--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 	<meta charset="UTF-8">
 	<title>FIGMA | Макеты для верстки — Верстка страницы</title>
 	<meta name="description" content="Макет для верстки сайта был взял с телеграм канала FIGMA | Макеты для верстки">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Open+Sans:wght@400;600;700&family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 		<!-- Начало: Данный блок удалять нельзя -->
@@ -76,7 +82,283 @@
 		<!-- Конец -->
 
 		<div class="main">
-			В данном блоке размещается верстка
+			<!-- hero -->
+			<section class="hero">
+				<div class="hero__wrapper">
+					<div class="container container--big">
+						<header class="header">
+							<div class="header__logo">
+								<a href="#">QWERy</a>
+							</div>
+							<div class="header__menu">
+								<ul class="menu__list">
+									<li class="menu__link">
+										<a href="#">Information</a>
+									</li>
+									<li class="menu__link">
+										<a href="#">About us</a>
+									</li>
+									<li class="menu__link">
+										<a href="#">Culture</a>
+									</li>
+								</ul>
+							</div>
+							<div class="header__search">
+								<div class="header__search-icon">
+									<svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M13.564 14.3392L8.80149 9.57585C6.68288 11.0821 3.76352 10.7136 2.08555 8.72829C0.407578 6.74294 0.530787 3.80301 2.36899 1.96502C4.2067 0.126223 7.14693 0.00248128 9.13264 1.68036C11.1184 3.35825 11.487 6.27789 9.98065 8.39668L14.7432 13.16L13.5648 14.3384L13.564 14.3392ZM5.90399 2.16667C4.32374 2.16632 2.9604 3.27558 2.63938 4.82288C2.31837 6.37018 3.12791 7.93024 4.57788 8.55855C6.02786 9.18685 7.71974 8.71071 8.62919 7.41839C9.53864 6.12608 9.41571 4.37278 8.33482 3.22002L8.83899 3.72002L8.27065 3.15335L8.26065 3.14335C7.63714 2.516 6.78848 2.16429 5.90399 2.16667Z" fill="white"/>
+									</svg>
+								</div>
+								<input class="header__search-input" type="text" name="search" placeholder="Search">
+							</div>
+						</header>
+						<div class="content">
+							<div class="content__suptitle">explore the Nature Beauty</div>
+							<div class="content__title">
+								<h1><span>Discover</span><br>Wonderful Indonesia</h1>
+							</div>
+						</div>
+						<div class="socials">
+							<div class="socials__text">Follow us</div>
+							<div class="socials__icons">
+								<a class="icon-wrapper">
+									<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M5.8 3.05176e-05H14.2C17.4032 3.05176e-05 20 2.59678 20 5.80003V14.2C20 17.4033 17.4032 20 14.2 20H5.8C2.59675 20 0 17.4033 0 14.2V5.80003C0 2.59678 2.59675 3.05176e-05 5.8 3.05176e-05ZM5.6 2.00001C3.61177 2.00001 2 3.61179 2 5.60001V14.4C2 16.3882 3.61177 18 5.6 18H14.4C16.3882 18 18 16.3882 18 14.4V5.60001C18 3.61179 16.3882 2.00001 14.4 2.00001H5.6ZM15.25 3.50001C15.9404 3.50001 16.5 4.05966 16.5 4.75001C16.5 5.44037 15.9404 6.00001 15.25 6.00001C14.5596 6.00001 14 5.44037 14 4.75001C14 4.05966 14.5596 3.50001 15.25 3.50001ZM10 5.00001C12.7614 5.00001 15 7.23859 15 10C15 12.7614 12.7614 15 10 15C7.23857 15 5 12.7614 5 10C5 7.23859 7.23857 5.00001 10 5.00001ZM10 7.00001C8.3431 7.00001 7 8.34321 7 10C7 11.6569 8.3431 13 10 13C11.6569 13 13 11.6569 13 10C13 8.34321 11.6569 7.00001 10 7.00001Z" fill="white"/>
+									</svg>
+								</a>
+								<a class="icon-wrapper">
+									<svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M20.9184 2.01238C20.1488 2.35373 19.3216 2.58442 18.4536 2.68815C19.3395 2.15701 20.0201 1.31598 20.3405 0.31378C19.5112 0.80564 18.5928 1.16278 17.6152 1.3552C16.8324 0.52112 15.7171 0 14.4827 0C12.1126 0 10.1909 1.92147 10.1909 4.29155C10.1909 4.6279 10.2289 4.95546 10.3021 5.2696C6.73532 5.0906 3.57298 3.38203 1.45632 0.78551C1.08688 1.41935 0.87524 2.15656 0.87524 2.94309C0.87524 4.43204 1.63287 5.74563 2.78446 6.5153C2.08102 6.4929 1.41919 6.2999 0.84062 5.97846C0.84021 5.99639 0.84021 6.0143 0.84021 6.0324C0.84021 8.1118 2.31956 9.8463 4.28282 10.2406C3.92272 10.3387 3.54357 10.3912 3.15217 10.3912C2.87563 10.3912 2.60678 10.3642 2.34469 10.3142C2.89084 12.0191 4.47576 13.26 6.35377 13.2945C4.88499 14.4457 3.0345 15.1318 1.02376 15.1318C0.67735 15.1318 0.33574 15.1114 0 15.0717C1.89926 16.2894 4.15514 17 6.57873 17C14.4726 17 18.7894 10.4605 18.7894 4.78918C18.7894 4.60314 18.7852 4.41805 18.7769 4.23395C19.6155 3.62886 20.3431 2.87302 20.9184 2.01238Z" fill="white"/>
+									</svg>
+								</a>
+								<a class="icon-wrapper">
+									<svg width="11" height="22" viewBox="0 0 11 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M8.99175 3.81896H11V0.161958C10.6535 0.112125 9.46196 0 8.07424 0C5.17873 0 3.19523 1.90421 3.19523 5.40404V8.625H0V12.7132H3.19523V23H7.11274V12.7142H10.1787L10.6654 8.62596H7.11182V5.80942C7.11274 4.62779 7.41705 3.81896 8.99175 3.81896Z" fill="white"/>
+									</svg>
+								</a>
+							</div>
+						</div>
+						<div class="btn-scroll">
+							<a href="#scrollSection" class='button-scroll'>Scroll down</a>
+							<svg width="16" height="24" viewBox="0 0 16 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M16 16L14.59 14.59L9 20.17V0H7V20.17L1.42 14.58L0 16L8 24L16 16Z" fill="white"/>
+							</svg>
+						</div>
+					</div>
+				</div>
+				<div class="hero__wrapper-second"></div>
+			</section>
+			<!-- /hero -->
+
+			<!-- section-second -->
+			<section class="section-second" id="scrollSection">
+				<div class="container section-second__container">
+					<div class="section-second__img">
+						<img src="img/1p.png" alt="man&mountains">
+					</div>
+					<div class="section-second__content">
+						<div class="suptitle">EAST nUSA TENGGARA</div>
+						<div class="title">
+							<h2>Have you<br>enjoyed your<br>holiday?</h2>
+						</div>
+						<div class="text">You will be amazed if you take part in this sailing Komodo island tour package. So it is also mandatory for you, besides enjoying Komodo tourism on Komodo Island, you also have to taste the marine tourism.  The beautiful waters of Komodo will make you meet many travelers from other countries.</div>
+						<div class="btn">
+							<a href="#">read more</a>
+							<svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M16.5 -6.99382e-07L15.09 1.41L20.67 7L0.5 7L0.5 9L20.67 9L15.08 14.58L16.5 16L24.5 8L16.5 -6.99382e-07Z" fill="#FBD784"/>
+							</svg>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- /section-second -->
+
+			<!-- section-third -->
+			<section class="section-third">
+				<div class="container">
+					<div class="swiper slider-img">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide slider-img__bg">
+								<div class="slide-content">
+									<div class="slide-suptitle">Bromo</div>
+									<div class="title">Steady your steps, we will climb together!</div>
+									<div class="text">Enjoying the vast expanse of the sea of sand, witnessing the splendor of Mount Semeru that soars into the sky, and gazing at the beauty of the sun moving out of its bed or otherwise enjoying the dim twilight from the Bromo ridge is an unforgettable experience when visiting Bromo.</div>
+									<div class="btn">
+										<button type="button">read more</button>
+										<svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M16.5 -6.99382e-07L15.09 1.41L20.67 7L0.5 7L0.5 9L20.67 9L15.08 14.58L16.5 16L24.5 8L16.5 -6.99382e-07Z" fill="#FBD784"/>
+										</svg>
+									</div>
+								</div>
+								<div class="slide-wrapper"></div>
+						  	</div>
+							<div class="swiper-slide slider-img__bg">
+								<div class="slide-content">
+									<div class="slide-suptitle">Bromo</div>
+									<div class="title">Steady your steps, we will climb together!</div>
+									<div class="text">Enjoying the vast expanse of the sea of sand, witnessing the splendor of Mount Semeru that soars into the sky, and gazing at the beauty of the sun moving out of its bed or otherwise enjoying the dim twilight from the Bromo ridge is an unforgettable experience when visiting Bromo.</div>
+									<div class="btn">
+										<button type="button">read more</button>
+										<svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M16.5 -6.99382e-07L15.09 1.41L20.67 7L0.5 7L0.5 9L20.67 9L15.08 14.58L16.5 16L24.5 8L16.5 -6.99382e-07Z" fill="#FBD784"/>
+										</svg>
+									</div>
+								</div>
+								<div class="slide-wrapper"></div>
+						  	</div>
+							<div class="swiper-slide slider-img__bg">
+								<div class="slide-content">
+									<div class="slide-suptitle">Bromo</div>
+									<div class="title">Steady your steps, we will climb together!</div>
+									<div class="text">Enjoying the vast expanse of the sea of sand, witnessing the splendor of Mount Semeru that soars into the sky, and gazing at the beauty of the sun moving out of its bed or otherwise enjoying the dim twilight from the Bromo ridge is an unforgettable experience when visiting Bromo.</div>
+									<div class="btn">
+										<button type="button">read more</button>
+										<svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M16.5 -6.99382e-07L15.09 1.41L20.67 7L0.5 7L0.5 9L20.67 9L15.08 14.58L16.5 16L24.5 8L16.5 -6.99382e-07Z" fill="#FBD784"/>
+										</svg>
+									</div>
+								</div>
+								<div class="slide-wrapper"></div>
+						  	</div>
+						</div>
+						<div class="swiper-button-prev"></div>
+						<div class="swiper-button-next"></div>
+					  </div>
+				</div>
+			</section>
+			<!-- /section-third -->
+
+			<!-- section-fourth -->
+			<section class="section-fourth">
+				<div class="container section-fourth__container">
+					<div class="section-fourth__content">
+						<div class="suptitle">INDONESIAN CULTURE</div>
+						<div class="title">
+							<h3>Our culture here<br>is very friendly<br>to people</h3>
+						</div>
+						<div class="text">Known for his politeness, manners and gentleness. This becomes a characteristic when they mingle with other tribes and become basic traits that are passed down by their ancestors.</div>
+						<div class="btn">
+							<button type="button">read more</button>
+							<svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M16.5 -6.99382e-07L15.09 1.41L20.67 7L0.5 7L0.5 9L20.67 9L15.08 14.58L16.5 16L24.5 8L16.5 -6.99382e-07Z" fill="#FBD784"/>
+							</svg>
+						</div>
+					</div>
+					<div class="section-fourth__img">
+						<img src="img/3.png" alt="women">
+					</div>
+				</div>
+			</section>
+			<!-- /section-fourth -->
+
+			<!-- footer -->
+			<footer class="footer">
+				<div class="container">
+					<div class="footer__header">
+						<div class="logo">
+							<a href="#">QWERy</a>
+						</div>
+						<div class="right">
+							<div class="text">Ready to explore?</div>
+							<div class="button">
+								<button>Get started</button>
+							</div>
+						</div>
+					</div>
+					<div class="footer__main">
+						<div class="left">
+							<div class="title">Let's go on vacation, Make your day</div>
+							<div class="send">
+								<input type="text" placeholder="Email address">
+								<button type="submit">
+									<svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M0.172119 12.2831L5.45525 7L0.172119 1.71688L1.80257 0.0864258L8.71616 7L1.80257 13.9136L0.172119 12.2831Z" fill="black"/>
+									</svg>
+								</button>
+							</div>
+						</div>
+						<div class="right">
+							<div class="menu__item">
+								<div class="menu__item-title">Services</div>
+								<div class="menu__item-link">
+									<a href="">Email Marketing</a>
+								</div>
+								<div class="menu__item-link">
+									<a href="">Campaigns</a>
+								</div>
+								<div class="menu__item-link">
+									<a href="">Branding</a>
+								</div>
+								<div class="menu__item-link">
+									<a href="">Offline</a>
+								</div>
+							</div>
+							<div class="menu__item">
+								<div class="menu__item-title">About</div>
+								<div class="menu__item-link">
+									<a href="">Our Story</a>
+								</div>
+								<div class="menu__item-link">
+									<a href="">Benefits</a>
+								</div>
+								<div class="menu__item-link">
+									<a href="">Team</a> 
+								</div>
+								<div class="menu__item-link">
+									<a href="">Careers</a>
+								</div>
+							</div>
+							<div class="menu__item">
+								<div class="menu__item-title">Help</div>
+								<div class="menu__item-link">
+									<a href="">FAQs</a>
+								</div>
+								<div class="menu__item-link">
+									<a href="">Contact Us</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="footer__socials">
+						<div class="footer__policy">
+							<div class="left">
+								<a href="#">Terms & Conditions</a>
+							</div>
+							<div class="right">
+								<a href="#">Privacy Policy</a>
+							</div>
+						</div>
+						<div class="socials__icon">
+							<div class="wrapper-icon">
+								<a href="#">
+									<svg width="13" height="27" viewBox="0 0 11 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M8.99175 3.81896H11V0.161958C10.6535 0.112125 9.46196 0 8.07424 0C5.17873 0 3.19523 1.90421 3.19523 5.40404V8.625H0V12.7132H3.19523V23H7.11274V12.7142H10.1787L10.6654 8.62596H7.11182V5.80942C7.11274 4.62779 7.41705 3.81896 8.99175 3.81896Z" fill="white"/>
+									</svg>
+								</a>
+							</div>
+							<div class="wrapper-icon">
+								<a href="#">
+									<svg width="28" height="24" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M20.9184 2.01238C20.1488 2.35373 19.3216 2.58442 18.4536 2.68815C19.3395 2.15701 20.0201 1.31598 20.3405 0.31378C19.5112 0.80564 18.5928 1.16278 17.6152 1.3552C16.8324 0.52112 15.7171 0 14.4827 0C12.1126 0 10.1909 1.92147 10.1909 4.29155C10.1909 4.6279 10.2289 4.95546 10.3021 5.2696C6.73532 5.0906 3.57298 3.38203 1.45632 0.78551C1.08688 1.41935 0.87524 2.15656 0.87524 2.94309C0.87524 4.43204 1.63287 5.74563 2.78446 6.5153C2.08102 6.4929 1.41919 6.2999 0.84062 5.97846C0.84021 5.99639 0.84021 6.0143 0.84021 6.0324C0.84021 8.1118 2.31956 9.8463 4.28282 10.2406C3.92272 10.3387 3.54357 10.3912 3.15217 10.3912C2.87563 10.3912 2.60678 10.3642 2.34469 10.3142C2.89084 12.0191 4.47576 13.26 6.35377 13.2945C4.88499 14.4457 3.0345 15.1318 1.02376 15.1318C0.67735 15.1318 0.33574 15.1114 0 15.0717C1.89926 16.2894 4.15514 17 6.57873 17C14.4726 17 18.7894 10.4605 18.7894 4.78918C18.7894 4.60314 18.7852 4.41805 18.7769 4.23395C19.6155 3.62886 20.3431 2.87302 20.9184 2.01238Z" fill="white"/>
+									</svg>
+								</a>
+							</div>
+							<div class="wrapper-icon">
+								<a href="#">
+									<svg width="28" height="30" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M5.8 3.05176e-05H14.2C17.4032 3.05176e-05 20 2.59678 20 5.80003V14.2C20 17.4033 17.4032 20 14.2 20H5.8C2.59675 20 0 17.4033 0 14.2V5.80003C0 2.59678 2.59675 3.05176e-05 5.8 3.05176e-05ZM5.6 2.00001C3.61177 2.00001 2 3.61179 2 5.60001V14.4C2 16.3882 3.61177 18 5.6 18H14.4C16.3882 18 18 16.3882 18 14.4V5.60001C18 3.61179 16.3882 2.00001 14.4 2.00001H5.6ZM15.25 3.50001C15.9404 3.50001 16.5 4.05966 16.5 4.75001C16.5 5.44037 15.9404 6.00001 15.25 6.00001C14.5596 6.00001 14 5.44037 14 4.75001C14 4.05966 14.5596 3.50001 15.25 3.50001ZM10 5.00001C12.7614 5.00001 15 7.23859 15 10C15 12.7614 12.7614 15 10 15C7.23857 15 5 12.7614 5 10C5 7.23859 7.23857 5.00001 10 5.00001ZM10 7.00001C8.3431 7.00001 7 8.34321 7 10C7 11.6569 8.3431 13 10 13C11.6569 13 13 11.6569 13 10C13 8.34321 11.6569 7.00001 10 7.00001Z" fill="white"/>
+									</svg>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="copyright">Copyright 2021 QWERy</div>
+				</div>
+			</footer>
+			<!-- /footer -->
 		</div>
+		<!-- /main -->
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
